--- a/src/content/magic-portfolio/quick-start.mdx
+++ b/src/content/magic-portfolio/quick-start.mdx
@@ -4,10 +4,18 @@ summary: "Magic Portfolio is a comprehensive, MDX-based, SEO-friendly, responsiv
 image: "/images/docs/magic-portfolio.jpg"
 updatedAt: "2025-03-16"
 navLabel: "Quick start"
-navIcon: "lightbulb"
+navIcon: "learn"
 ---
 
+## About
+
 Magic Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfolio template built with Once UI and Next.js.
+
+## License
+
+Magic Portfolio is licensed under the [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/). You can only use it for personal purposes, and you must attribute the original work. The attribution is added in the footer by default, but you can place it in any other, visible part of your site.
+
+If you need an extended license, please [contact us](mailto:lorant@once-ui.com).
 
 ## Quick start
 
