--- a/src/content/once-ui/quick-start.mdx
+++ b/src/content/once-ui/quick-start.mdx
@@ -1,15 +1,41 @@
 ---
-title: "Overview"
+title: "Quick start"
 summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
 image: "/images/docs/once-ui.jpg"
-updatedAt: "2025-03-16"
-navLabel: "Overview"
-navIcon: "lightbulb"
+updatedAt: "2025-03-17"
+navLabel: "Quick start"
+navIcon: "learn"
 ---
+
+## About
 
 Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the [next generation](https://lorant.one/work/once-ui) of web applications.
 
+## License
+
+Once UI is licensed under the MIT license.
+
 ## Quick start
+
+Create a new Once UI app with our CLI tool. It will clone the latest version and install the dependencies:
+
+<CodeBlock compact marginBottom="16" codeInstances={[
+  {
+    code: "npx create-once-ui-app@latest my-app",
+    language: "bash"
+  }
+]} />
+
+Start the local development server:
+
+<CodeBlock compact marginBottom="16" codeInstances={[
+  {
+    code: "npm run dev",
+    language: "bash"
+  }
+]} />
+
+## Documentation
 
 <Feedback icon description={<>The complete Once UI documentation is available on <SmartLink href="https://once-ui.com/docs">once-ui.com</SmartLink></>} vertical="center"/>
 
