Magic portfolio docs updates

--- a/src/content/magic-portfolio/localization.mdx
+++ b/src/content/magic-portfolio/localization.mdx
@@ -6,4 +6,4 @@ navLabel: "Localization"
 navIcon: "language"
 ---
 
-Magic Portfolio doesn't support localization anymore, but the localized version created by [François Hernandez](https://github.com/francoishernandez) is still available as a [separate branch](https://github.com/once-ui-system/magic-portfolio/tree/localization-(Once-UI-0.4.2)). This branch will not receive further updates.
+In the latest version of Magic Portfolio, localization is no longer supported. However, the localized version created by [François Hernandez](https://github.com/francoishernandez) is still available as a [separate branch](https://github.com/once-ui-system/magic-portfolio/tree/localization-(Once-UI-0.4.2)). This branch will not receive further updates.
