--- a/src/content/magic-portfolio/content.mdx
+++ b/src/content/magic-portfolio/content.mdx
@@ -16,7 +16,7 @@ Replace the `src/app/favicon.ico` file with your own favicon.
 
 ## Content
 
-Replace the content in the `src/app/resources/content.js` file with your own content. You can use custom components in most cases, since the props are usually declared as `ReactNode` instead of `string`, but it's important that you need to import them in the file.
+Replace the content in the `resources/content.js` file with your own content. You can use custom components in most cases, since the props are usually declared as `ReactNode` instead of `string`, but it's important that you need to import them in the file.
 
 <CodeBlock
     marginBottom="16"
@@ -31,7 +31,7 @@ const person = {
   ...
 };`,
     language: "tsx",
-    label: "resources/content.js"
+    label: "src/app/resources/content.js"
   }
 ]} />
 
@@ -59,7 +59,7 @@ Your personal details are used across the whole app to render personalized headi
     languages: ["English", "Bahasa"], // optional: Leave the array empty if you don't want to display languages
 };`,
     language: "tsx",
-    label: "resources/content.js"
+    label: "src/app/resources/content.js"
   }
 ]} />
 
@@ -85,7 +85,7 @@ Social links are rendered on the `/about` page and in the footer based on the ar
     },
 ];`,
     language: "tsx",
-    label: "resources/content.js"
+    label: "src/app/resources/content.js"
   }
 ]} />
 
@@ -111,7 +111,7 @@ Each page have it's own object that manages the personalized content, such as he
     ),
 };`,
     language: "tsx",
-    label: "resources/content.js"
+    label: "src/app/resources/content.js"
   }
 ]} />
 
