--- a/src/content/magic-portfolio/content.mdx
+++ b/src/content/magic-portfolio/content.mdx
@@ -65,7 +65,7 @@ Your personal details are used across the whole app to render personalized headi
 
 ### Social links
 
-Social links are rendered on the `/about` page and in the footer based on the array configured in the `social` object. You can set custom icons to each, but don't forget to import them in `src/once-ui/icons.ts`.
+Social links are rendered on the `/about` page and in the footer based on the array configured in the `social` object. You can set custom icons to each, but don't forget to import them in `src/once-ui/icons.ts`. Read the Once UI documentation](https://once-ui.com/docs/icons) for more information.
 
 <CodeBlock
     marginBottom="16"
