--- a/src/content/magic-docs/components.mdx
+++ b/src/content/magic-docs/components.mdx
@@ -308,7 +308,7 @@ Cards are used to group related content and actions.
 
 ## Icon
 
-Icons are used to visually represent actions, objects, or concepts.
+Icons are used to visually represent actions, objects, or concepts. For instructions on importing new icons, head over to [the Once UI documentation](https://once-ui.com/docs/icons).
 
 <Column fillWidth gap="-1" marginBottom="16" marginTop="8">
 <CodeBlock
