--- a/src/content/magic-portfolio/seo.mdx
+++ b/src/content/magic-portfolio/seo.mdx
@@ -18,6 +18,11 @@ Magic Portfolio automatically generates schema tags for your pages based on the 
 
 Social sharing images (open-graph and twitter) are automatically generated with `next/og`.
 
+<Feedback
+    icon
+    description="Make sure you have updated the `content.js` file with your own information and the `baseURL` variable in the `config.js` file."
+/>
+
 <CodeBlock
     marginBottom="16"
     highlight="4"
