--- a/src/content/magic-portfolio/seo.mdx
+++ b/src/content/magic-portfolio/seo.mdx
@@ -20,7 +20,10 @@ Social sharing images (open-graph and twitter) are automatically generated with 
 
 <Feedback
     icon
-    description="Make sure you have updated the `content.js` file with your own information and the `baseURL` variable in the `config.js` file."
+    marginBottom="16"
+    description={<>
+        Make sure you have updated the <InlineCode>content.js</InlineCode> file with your own information and the <InlineCode>baseURL</InlineCode> variable in the <InlineCode>config.js</InlineCode> file.
+    </>}
 />
 
 <CodeBlock
