add magic store docs

--- a/src/content/get-started.mdx
+++ b/src/content/get-started.mdx
@@ -2,7 +2,7 @@
 title: "Get Started"
 updatedAt: "2025-03-16"
 summary: "Once UI template documentation."
-image: "/images/cover.jpg"
+image: "/images/quasar-coding.jpg"
 navIcon: "rocket"
 ---
 
@@ -44,7 +44,21 @@ Since our templates are not just static page examples, but functional, productio
     <SmartImage src="/images/docs/magic-portfolio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Portfolio</Text>
-      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Quick start with the portfolio template.</Text>
+      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Create your beautiful creative portfolio.</Text>
+    </Column>
+  </Card>
+  <Card
+    href="/docs/magic-store/quick-start"
+    fillWidth
+    radius="l-4"
+    direction="column"
+    padding="4"
+    gap="4"
+  >
+    <SmartImage src="/images/docs/magic-store.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
+    <Column fillWidth padding="20" gap="8" horizontal="start">
+      <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Store</Text>
+      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Start selling merch with a ready-made store.</Text>
     </Column>
   </Card>
   <Card
@@ -58,7 +72,7 @@ Since our templates are not just static page examples, but functional, productio
     <SmartImage src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Docs</Text>
-      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Quick start with the documentation template.</Text>
+      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Create product docs without writing code.</Text>
     </Column>
   </Card>
   <Card
@@ -72,7 +86,7 @@ Since our templates are not just static page examples, but functional, productio
     <SmartImage src="/images/docs/magic-bio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
     <Column fillWidth padding="20" gap="8" horizontal="start">
       <Text variant="heading-strong-m" onBackground="neutral-strong" align="left">Magic Bio</Text>
-      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Quick start with the link in bio template.</Text>
+      <Text variant="body-default-s" onBackground="neutral-weak" align="left">Launch your link-in-bio site in minutes.</Text>
     </Column>
   </Card>
 </Grid>
