--- a/src/content/magic-portfolio/quick-start.mdx
+++ b/src/content/magic-portfolio/quick-start.mdx
@@ -15,7 +15,7 @@ Magic Portfolio is a comprehensive, MDX-based, SEO-friendly, responsive portfoli
 
 Magic Portfolio is licensed under the [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/). You can only use it for personal purposes, and you must attribute the original work. The attribution is added in the footer by default, but you can place it in any other, visible part of your site.
 
-If you need an extended license, please [contact us](mailto:lorant@once-ui.com).
+Subscribe to the [Once UI Pro plan](https://once-ui.com/pricing) to extend the license to [Dopler CC](https://once-ui.com/products/magic-portfolio).
 
 ## Quick start
 
