--- a/src/content/once-ui/quick-start.mdx
+++ b/src/content/once-ui/quick-start.mdx
@@ -37,7 +37,7 @@ Start the local development server:
 
 ## Documentation
 
-<Feedback icon description={<>The complete Once UI documentation is available on <SmartLink href="https://once-ui.com/docs">once-ui.com</SmartLink></>} vertical="center"/>
+<Feedback icon description={<>The complete Once UI documentation is available on <SmartLink href="https://once-ui.com/docs">once-ui.com</SmartLink>.</>} vertical="center"/>
 
 <Grid fillWidth gap="8" columns="2" mobileColumns="1" marginTop="8">
   <Card href="https://once-ui.com/docs/installation" fillWidth gap="8" padding="24" radius="l" direction="column">
