update next version + simplify routes

--- a/src/content/get-started.mdx
+++ b/src/content/get-started.mdx
@@ -20,11 +20,11 @@ Since our templates are not just static page examples, but functional, productio
 
 <Grid fillWidth columns={2} mobileColumns={1} gap="8" marginTop="16">
   <Card
-    href="/docs/once-ui/quick-start"
+    href="/once-ui/quick-start"
     fillWidth
-    radius="l-4"
+    radius="l"
+    border="neutral-alpha-medium"
     direction="column"
-    padding="4"
     gap="4"
   >
     <SmartImage src="/images/docs/once-ui.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
@@ -34,11 +34,11 @@ Since our templates are not just static page examples, but functional, productio
     </Column>
   </Card>
   <Card
-    href="/docs/magic-portfolio/quick-start"
+    href="/magic-portfolio/quick-start"
     fillWidth
-    radius="l-4"
+    radius="l"
+    border="neutral-alpha-medium"
     direction="column"
-    padding="4"
     gap="4"
   >
     <SmartImage src="/images/docs/magic-portfolio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
@@ -48,11 +48,11 @@ Since our templates are not just static page examples, but functional, productio
     </Column>
   </Card>
   <Card
-    href="/docs/magic-store/quick-start"
+    href="/magic-store/quick-start"
     fillWidth
-    radius="l-4"
+    radius="l"
+    border="neutral-alpha-medium"
     direction="column"
-    padding="4"
     gap="4"
   >
     <SmartImage src="/images/docs/magic-store.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
@@ -62,11 +62,11 @@ Since our templates are not just static page examples, but functional, productio
     </Column>
   </Card>
   <Card
-    href="/docs/magic-docs/quick-start"
+    href="/magic-docs/quick-start"
     fillWidth
-    radius="l-4"
+    radius="l"
+    border="neutral-alpha-medium"
     direction="column"
-    padding="4"
     gap="4"
   >
     <SmartImage src="/images/docs/magic-docs.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
@@ -76,11 +76,11 @@ Since our templates are not just static page examples, but functional, productio
     </Column>
   </Card>
   <Card
-    href="/docs/magic-bio/quick-start"
+    href="/magic-bio/quick-start"
     fillWidth
-    radius="l-4"
+    radius="l"
+    border="neutral-alpha-medium"
     direction="column"
-    padding="4"
     gap="4"
   >
     <SmartImage src="/images/docs/magic-bio.jpg" aspectRatio="16/9" radius="l" sizes="400px" />
