--- a/src/content/magic-docs/pages.mdx
+++ b/src/content/magic-docs/pages.mdx
@@ -29,7 +29,7 @@ The code above will ensure that the `/roadmap` page is not accessible and is not
 
 ## Dynamic pages
 
-Magic Docs generates pages from `.mdx` files in the `src/content` directory. You can add the files in subdirectories to create a nested structure for the navigation. Learn more about customizing the navigation in the [sidebar](/docs/magic-docs/sidebar) section.
+Magic Docs generates pages from `.mdx` files in the `src/content` directory. You can add the files in subdirectories to create a nested structure for the navigation. Learn more about customizing the navigation in the [sidebar](/magic-docs/sidebar) section.
 
 ### Frontmatter
 
@@ -62,7 +62,7 @@ You can use MDX to write the content of your projects. It helps you write rich a
 
 ### Components
 
-You can see the list of available components available in the [components](/docs/magic-docs/components) section.
+You can see the list of available components available in the [components](/magic-docs/components) section.
 
 ### Hot reload
 
