--- a/src/content/magic-docs/search.mdx
+++ b/src/content/magic-docs/search.mdx
@@ -12,7 +12,7 @@ Magic Docs' search is powered by Once UI's Kbar component, which can be opened f
 
 ## Static routes
 
-Static routes for home, changelog, and roadmap are pre-configured. When [disabling](/docs/magic-docs/pages#static-pages) `/changelog` or `/roadmap`, the corresponding routes are automatically removed from the search results in Kbar.
+Static routes for home, changelog, and roadmap are pre-configured. When [disabling](/magic-docs/pages#static-pages) `/changelog` or `/roadmap`, the corresponding routes are automatically removed from the search results in Kbar.
 
 ## Extending Kbar
 
